expanded product entry to include nutrition
